--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "sonner": "^1.0.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
